Change the project to pom war and add more codes without comments. In the next version the comments and a more stable version will be added.

--- a/src/main/resource/SystemConstants.properties
+++ b/src/main/resource/SystemConstants.properties
@@ -6,3 +6,8 @@ MENU_XML=menu.xml
 DATA_STRUCTURE_PATH=dataSchemaXmls/
 #The data dimension xml path
 DATA_DIMENSION_PATH=dimensionXmls/
+#The depth of the json data
+JSON_DEPTH=2
+
+########################################################
+HBASE_ZOOKEEPER_QUORUM=cloud101417558.wd.nm.ss.nop.sogou-op.org,cloud101417560.wd.nm.ss.nop.sogou-op.org,cloud101417562.wd.nm.ss.nop.sogou-op.org,cloud101417564.wd.nm.ss.nop.sogou-op.org,cloud101417566.wd.nm.ss.nop.sogou-op.org,cloud101417568.wd.nm.ss.nop.sogou-op.org,cloud101417570.wd.nm.ss.nop.sogou-op.org,cloud101417578.wd.nm.ss.nop.sogou-op.org,cloud101417580.wd.nm.ss.nop.sogou-op.org,
