Add more functions 1) fix the bugs of querying json (and make its recursive querying by dimension) 2) add dynamic loading, id menu.xml changed 3) add more tools eg:time tool 4) reform the structure of some packages

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,14 @@
 		<servlet-name>QueryServlet</servlet-name>
 		<url-pattern>/QueryServlet</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>MenuServlet</servlet-name>
+		<servlet-class>com.sogou.flow.action.MenuServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MenuServlet</servlet-name>
+		<url-pattern>/MenuServlet</url-pattern>
+	</servlet-mapping>
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>com.sogou.flow.filters.SetCharacterEncodingFilter</filter-class>
